--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
         <p>Feel free to fill out this form and shoot me an email, I'll get back to you as soon as I can!</p>
         <div class="middle-container">
             <div class="contact-form-container">
-            <form class="contact-form" method="POST" action="contact-form.php" enctype="text/plain">
+            <form class="contact-form" method="POST" action="https://formspree.io/xqkyrjvg">
           
               <label for="fname">First Name</label>
               <input type="text" id="fname" name="firstname" placeholder="Your First Name..">
