Added backgrounds, edited projects page, and adjusted contact-me section.

--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
             <div class="contact-me">
               <h2>Get In Touch</h2>
               <h3>Feel free to send me an email!</h3>
-              <a class="btn" href="contact.html">CONTACT ME</a>
+              <p>Tell me what I can do for you!</p>
+              <a class="btn" id="contact-btn" href="contact.html">CONTACT ME</a>
             </div>
           </div>
           
