--- a/project.html
+++ b/project.html
@@ -18,7 +18,13 @@
             </nav>
           </div>
           <div class="middle-container">
-
+            <h2>What I'm Working On</h2>
+            <h3>Current Projects</h3>
+            <p>Here are some of the things I'm currently working on.</p>
+            <h3>Completed Works</h3>
+            <p>Here are some projects I've done in the past.</p>
+            <h2>For More</h2>
+            <p>To see more of my work, visit my <a href=https://github.com/nferrington94">github</a>!</p>
           </div>
           <div class="bottom-container">
             <a class="footer-link" href="https://www.linkedin.com/in/nick-ferrington-463a601b6/"><img class="footer-icon" src="Images/linkedin.png" alt="Linked In"></a>
