Changed Profile format to PNG

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
         <div class="middle-container">
             <div id="profile">
-              <img src="Images/Nick.jpg" alt="Nick Ferrington">
+              <img src="Images/Nick.png" alt="Nick Ferrington">
               <h2>Hello.</h2>
               <h3 class="intro">I'm a junior developer whose strengths are full stack web and app development.</h3>
             </div>
